style.css modifed

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body{
 }
 .forgetten{
     text-decoration: none;
-    color: #a4b4d6;
+    color: #a4b6dd;
     font-size: 11px;
 }
 .submit-button{
