--- a/style.css
+++ b/style.css
@@ -51,3 +51,17 @@ body{
 .submit-button:hover{
     background: red;
 }
+.left-section{
+    width: 50%;
+    float: left;
+}
+.right-section{
+    width: 50%;
+    float: right;
+}
+.main-body{
+     background: linear-gradient(white,#d3d8e8);
+     width: 100%;
+     height: 500px;
+     
+}
