--- a/style.css
+++ b/style.css
@@ -54,14 +54,23 @@ body{
 .left-section{
     width: 50%;
     float: left;
+    padding-left: 134px;
+    padding-top: 52px;
 }
 .right-section{
     width: 50%;
     float: right;
+    padding-left: 219px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: -108px;
 }
 .main-body{
      background: linear-gradient(white,#d3d8e8);
      width: 100%;
      height: 500px;
-     
+}
+.para{
+    font-weight: bold;
+    font-size: 21px;
 }
